# lappy

./: .gitignore  LICENSE  README.md  mps demo.ipynb  mps.py  pyproject.toml  requirements.txt  setup.py  utils.py
benchmarks/benchmark_dev/: benchmarking.py  chevron.py  gww.py  l_shape.py
benchmarks/benchmark_suite/: README.md  __init__.py  basis_builder.py  domains.py  results.py  run_all.py  runner.py
benchmarks/benchmark_suite/slurm/: prepare_jobs.py  run_job.py  setup_env.sh  submit_array.sh
benchmarks/benchmark_suite/sweeps/: __init__.py  basis_size_sweep.py  fb_corner_sweep.py  fs_placement_sweep.py  n_eigs_sweep.py  regularization_sweep.py
benchmarks/new_suite/: benchmarking.py  domains.py  fb_basis_corners.py  fb_basis_size.py  run_fb_basis_corners.sh
benchmarks/reference/: gww.py  iso_tri.py  l_shape.py  memtest.py  parallel_tensions_benchmark.py  solve_interval_parallel_benchmark.py
examples/: quad_corner_search.py  quadsearch.py  trisearch.py
jupyter_notebooks/: pymps_demo.ipynb
lappy/: __init__.py  asymp.py  bases.py  bounds.py  cache.py  core.py  cubature_rules.py  domain.py  evp.py  exact.py  geometry.py  mps.py  opt.py  quad.py  reference.py  utils.py
pymps/: __init__.py  bases.py  cubature.py  cubature_rules.py  evp.py  mps.py  opt.py  param.py  quad.py  utils.py
src/: bases.py  mps.py
tests/: conftest.py  test_asymp.py  test_bounds.py  test_cache.py  test_exact.py  test_geometry.py  test_mps.py  test_reference.py
