[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyMPS"
version = "0.1.0"
description = "Python implementation of the Method of Particular Solutioins"
authors = [{name = "Hayden Ringer", email = "hringer@vt.edu"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy >= 2.0",
    "scipy >= 1.14",
    "matplotlib >= 3.9",
    "pygmsh >= 7.1",
    "shapely >= 2.0",
    "mpi4py >= 4.0",
    "pygsvd>=0.0.2",
]

[tool.uv.sources]
pygsvd = { path = "../python/pygsvd" }
