[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lappy"
version = "0.1.0"
description = "Python implementation of the Method of Particular Solutions"
authors = [{name = "Hayden Ringer", email = "hringer@vt.edu"}]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy >= 2.3",
    "scipy >= 1.14",
    "matplotlib >= 3.9",
    "pygmsh >= 7.1",
    "shapely >= 2.0",
    "joblib >= 1.4",
    "pygsvd>=0.0.2",
    "jupyter>=1.1.1",
    "pytest>=8.4.1",
    "mpmath>=1.3",
]

[tool.uv.sources]
pygsvd = { path = "../pygsvd", editable = true }
